; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/sys/extr_bta_sys_main.c_bta_sys_sendmsg.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/bta/sys/extr_bta_sys_main.c_bta_sys_sendmsg.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@SIG_BTU_BTA_MSG = common dso_local global i32 0, align 4
@OSI_THREAD_MAX_TIMEOUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @bta_sys_sendmsg(i8* %0) #0 {
  %2 = alloca i8*, align 8
  store i8* %0, i8** %2, align 8
  %3 = load i32, i32* @SIG_BTU_BTA_MSG, align 4
  %4 = load i8*, i8** %2, align 8
  %5 = load i32, i32* @OSI_THREAD_MAX_TIMEOUT, align 4
  %6 = call i32 @btu_task_post(i32 %3, i8* %4, i32 %5)
  %7 = icmp eq i32 %6, 0
  br i1 %7, label %8, label %11

8:                                                ; preds = %1
  %9 = load i8*, i8** %2, align 8
  %10 = call i32 @osi_free(i8* %9)
  br label %11

11:                                               ; preds = %8, %1
  ret void
}

declare dso_local i32 @btu_task_post(i32, i8*, i32) #1

declare dso_local i32 @osi_free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
